unpolished but works

--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
     </head>
   <body>
     <h1>This is a canvas test!</h1>
-    <canvas id="canvas" width="800" height="800"></canvas>
+    <canvas id="canvas" width="800" height="500"></canvas>
+    <div id="debug"></div>
     <script type="module" src="main.js"></script>
+    <button id="btn">Force</button>
   </body>
 </html>
