--- a/main.html
+++ b/main.html
@@ -55,6 +55,6 @@
       </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./built/main.js"></script>
   </body>
 </html>
